# nix-bindings-haskell

./: .gitignore  README.md  cabal.project  flake.nix
.github/workflows/: ci.yml  release.yml
hs-nix-bindings/: LICENSE  README.md  hs-nix-bindings.cabal
hs-nix-bindings-sys/: README.md  generate-bindings  hs-nix-bindings-sys.cabal
hs-nix-bindings/src/Nix/: C.hs
hs-nix-bindings/src/Nix/C/: Internal.hs  Monad.hs  Sys.hs  Unsafe.hs
hs-nix-bindings/src/Nix/C/Store/: PathInfo.hs
hs-nix-bindings/src/Nix/C/Unsafe/: GC.hs
hs-nix-bindings/test/Test/Nix/C/: Construction.hs  Settings.hs  Util.hs
hs-nix-c-api/: CHANGELOG.md  README.md  hs-nix-c-api.cabal
hs-nix-c-api-sys/: CHANGELOG.md  README.md  generate-bindings  hs-nix-c-api-sys.cabal
hs-nix-c-api-sys/binding-specs/: NixExpr.yaml  NixExternal.yaml  NixFetchers.yaml  NixFlake.yaml  NixStore.yaml  NixStoreDerivation.yaml  NixStorePath.yaml  NixUtil.yaml  NixValue.yaml
hs-nix-c-api/src/: Nix.hs
hs-nix-c-api/src/Nix/: C.hs  Context.hs  Expr.hs  Init.hs  Internal.hs  Monad.hs  Store.hs  Throw.hs  Unsafe.hs  Value.hs
hs-nix-c-api/src/Nix/C/: Context.hs  Internal.hs  Sys.hs
hs-nix-c-api/src/Nix/C/Unsafe/: Init.hs
hs-nix-c-api/src/Nix/Store/: PathInfo.hs
hs-nix-c-api/src/Nix/Unsafe/: Expr.hs  Flake.hs  GC.hs  Init.hs  Settings.hs  Store.hs  Value.hs
hs-nix-c-api/test/: Main.hs
hs-nix-c-api/test/Test/Nix/: Construction.hs  Expr.hs  Monad.hs  Settings.hs  Store.hs  Util.hs  Value.hs
hs-nix-c-api/test/Test/Nix/C/: Expr.hs  Monad.hs  Value.hs
nix-bindings/: CHANGELOG.md  README.md  nix-bindings.cabal
nix-bindings-sys/: .gitignore  README.md  generate-bindings  nix-bindings-sys.cabal
nix-bindings/src/Nix/: C.hs
nix-bindings/src/Nix/C/: Context.hs  Hash.hs  Internal.hs  Monad.hs  Sys.hs  Unsafe.hs
nix-bindings/src/Nix/C/Hash/: Nix32.hs
nix-bindings/src/Nix/C/Store/: Derivation.hs  PathInfo.hs  Realisation.hs  Reference.hs
nix-bindings/src/Nix/C/Unsafe/: Eval.hs  Expr.hs  Flake.hs  Init.hs  Settings.hs  Store.hs  Value.hs
nix-bindings/test/: Main.hs
nix-bindings/test/Test/Nix/C/: Monad.hs  Store.hs
nix-bindings/test/Test/Nix/C/Hash/: Nix32.hs
