cabal-version: 3.4
name:          hs-nix-c-api
version:       0.1.0.0
synopsis:      Safe Haskell bindings to the Nix C API
description:
  Idiomatic Haskell bindings to the Nix C API with automatic resource
  management, structured error handling, and type safety.
  .
  == Quick start
  .
  @
  {-# LANGUAGE OverloadedStrings #-}
  import Nix
  .
  main :: IO ()
  main = do
    result <- 'runNix' $ do
      'initNix'
      'withStore' "local" $ \\store ->
        'withEvalState' store $ \\state -> do
          val <- 'evalFromString' state "1 + 2" "."
          'valueForce' state val
          'getInt' state val
    print result  -- Right 3
  @
  .
  == Modules
  .
  * "Nix" — safe monadic API via the 'Nix' monad
  * "Nix.Unsafe" — throwing IO API (re-exports domain modules)
  * "Nix.Monad" — 'Nix' monad type and runners
  * "Nix.Context" — error types ('NixError', 'NixErrorKind')
  * "Nix.C" — re-export of raw FFI bindings from @hs-nix-c-api-sys@
  .
  == Design
  .
  Three usage styles from a single implementation:
  .
  * @import Nix@ — the 'Nix' monad with automatic error short-circuiting
  * @import Nix.Unsafe@ — throwing IO functions for direct use
  * @'runNix'@ — get @Either NixError a@ from any 'Nix' computation
  .
  Resources ('Store', 'EvalState') are managed via bracket-style
  @with*@ functions that guarantee cleanup.
  .
  For raw FFI access to the complete C API surface, use "Nix.C".

license:       MIT
license-file:  LICENSE
build-type:    Simple

common common
  default-language: GHC2021
  ghc-options:      -Wall -Wunused-packages
  build-depends:    base >=4.18 && <5

library
  import:           common
  hs-source-dirs:   src
  build-depends:
    , bytestring
    , hs-bindgen-runtime
    , hs-nix-c-api-sys
    , transformers
  exposed-modules:
    Nix
    Nix.C
    Nix.Context
    Nix.Monad
    Nix.Unsafe
    Nix.Unsafe.Expr
    Nix.Unsafe.Init
    Nix.Unsafe.Store
    Nix.Unsafe.Value

  other-modules:
    Nix.Internal

  pkgconfig-depends:
    , nix-util-c
    , nix-store-c
    , nix-expr-c

  other-extensions:
    DerivingVia
    TypeApplications

test-suite hs-nix-c-api-test
  import:           common
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  other-modules:
    Test.Nix.Util
    Test.Nix.Store
    Test.Nix.Expr
    Test.Nix.Value
    Test.Nix.Construction
    Test.Nix.Monad

  build-depends:
    , bytestring
    , hs-nix-c-api
    , hspec
