cabal-version: 3.4
name:          hs-nix-c-api
version:       0.1.0.0
synopsis:      Safe Haskell bindings to the Nix C API
description:
  Idiomatic Haskell bindings to the Nix C API with automatic resource
  management, structured error handling, and type safety.
  .
  == Quick start
  .
  @
  {-# LANGUAGE OverloadedStrings #-}
  {-# LANGUAGE QuasiQuotes #-}
  import Nix
  import System.OsPath (osp)
  .
  main :: IO ()
  main = do
    result <- 'runNix' $ do
      'initNix'
      'withStore' "local" $ \\store ->
        'withEvalState' store $ \\state -> do
          val <- 'evalFromString' state "1 + 2" [osp|.|]
          'valueForce' state val
          'getInt' state val
    print result  -- Right 3
  @
  .
  == Modules
  .
  * "Nix" — safe monadic API via the 'Nix' monad
  * "Nix.Unsafe" — throwing IO API (re-exports domain modules)
  * "Nix.Monad" — 'Nix' monad type and runners
  * "Nix.Context" — error types ('NixError', 'NixErrorKind')
  * "Nix.C" — re-export of raw FFI bindings from @hs-nix-c-api-sys@
  .
  == Design
  .
  Three usage styles from a single implementation:
  .
  * @import Nix@ — the 'Nix' monad with automatic error short-circuiting
  * @import Nix.Unsafe@ — throwing IO functions for direct use
  * @'runNix'@ — get @Either NixError a@ from any 'Nix' computation
  .
  Resources ('Store', 'EvalState') are managed via bracket-style
  @with*@ functions that guarantee cleanup.
  .
  For raw FFI access to the complete C API surface, use "Nix.C".

license:          MIT
license-file:     LICENSE
author:           Cachix
maintainer:       support@cachix.org
category:         Nix, System
homepage:         https://github.com/cachix/hs-nix-c-api
bug-reports:      https://github.com/cachix/hs-nix-c-api/issues
build-type:       Simple
extra-doc-files:
  CHANGELOG.md
  README.md

common common
  default-language: GHC2021
  ghc-options:      -Wall -Wunused-packages
  build-depends:    base >=4.18 && <5

library
  import:           common
  hs-source-dirs:   src
  build-depends:
    , aeson
    , base64-bytestring
    , bytestring
    , filepath          >=1.4.200
    , hs-bindgen-runtime
    , hs-nix-c-api-sys
    , os-string         >=2.0
    , text
    , transformers
  exposed-modules:
    Nix
    Nix.C
    Nix.Context
    Nix.Monad
    Nix.Store.PathInfo
    Nix.Unsafe
    Nix.Unsafe.Expr
    Nix.Unsafe.GC
    Nix.Unsafe.Init
    Nix.Unsafe.Settings
    Nix.Unsafe.Store
    Nix.Unsafe.Flake
    Nix.Unsafe.Value

  other-modules:
    Nix.Internal

  pkgconfig-depends:
    , nix-util-c
    , nix-store-c
    , nix-expr-c
    , nix-flake-c
    , nix-fetchers-c

  other-extensions:
    DerivingVia
    TypeApplications

test-suite hs-nix-c-api-test
  import:           common
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  other-modules:
    Test.Nix.Util
    Test.Nix.Store
    Test.Nix.Expr
    Test.Nix.Value
    Test.Nix.Construction
    Test.Nix.Monad
    Test.Nix.Settings

  build-depends:
    , bytestring
    , filepath    >=1.4.200
    , hs-nix-c-api
    , hspec
    , temporary
