cabal-version: 3.4
name:          nix-bindings
version:       0.1.0.0
synopsis:      Safe Haskell bindings to the Nix C API
description:
  Idiomatic Haskell bindings to the Nix C API with automatic resource
  management, structured error handling, and type safety.
  .
  == Quick start
  .
  @
  {-# LANGUAGE OverloadedStrings #-}
  {-# LANGUAGE QuasiQuotes #-}
  import Nix.C
  import System.OsPath (osp)
  .
  main :: IO ()
  main = do
    result <- 'runNix' $ do
      'initNix'
      'withStore' "local" $ \\store ->
        'withEvalState' store $ \\state -> do
          val <- 'evalFromString' state "1 + 2" [osp|.|]
          'valueForce' state val
          'getInt' state val
    print result  -- Right 3
  @
  .
  == Modules
  .
  * "Nix.C" — safe monadic API via the 'Nix' monad
  * "Nix.C.Unsafe" — throwing IO API (re-exports domain modules)
  * "Nix.C.Monad" — 'Nix' monad type and runners
  * "Nix.C.Context" — error types ('NixError', 'NixErrorKind')
  * "Nix.C.Sys" — re-export of raw FFI bindings from @nix-bindings-sys@
  .
  == Design
  .
  Three usage styles from a single implementation:
  .
  * @import Nix.C@ — the 'Nix' monad with automatic error short-circuiting
  * @import Nix.C.Unsafe@ — throwing IO functions for direct use
  * @'runNix'@ — get @Either NixError a@ from any 'Nix' computation
  .
  Resources ('Store', 'EvalState') are managed via bracket-style
  @with*@ functions that guarantee cleanup.
  .
  For raw FFI access to the complete C API surface, use "Nix.C.Sys".

license:          MIT
license-file:     LICENSE
author:           Cachix
maintainer:       support@cachix.org
category:         Nix, System
homepage:         https://github.com/cachix/nix-bindings-haskell
bug-reports:      https://github.com/cachix/nix-bindings-haskell/issues
build-type:       Simple
extra-doc-files:
  CHANGELOG.md
  README.md

common common
  default-language: GHC2021
  ghc-options:      -Wall -Wunused-packages
  build-depends:    base >=4.18 && <5

library
  import:           common
  hs-source-dirs:   src
  build-depends:
    , aeson
    , base64-bytestring
    , bytestring
    , filepath          >=1.4.200
    , hs-bindgen-runtime
    , nix-bindings-sys
    , os-string         >=2.0
    , text
    , transformers
  exposed-modules:
    Nix.C
    Nix.C.Context
    Nix.C.Monad
    Nix.C.Store.PathInfo
    Nix.C.Sys
    Nix.C.Unsafe
    Nix.C.Unsafe.Expr
    Nix.C.Unsafe.Flake
    Nix.C.Unsafe.GC
    Nix.C.Unsafe.Init
    Nix.C.Unsafe.Settings
    Nix.C.Unsafe.Store
    Nix.C.Unsafe.Value

  other-modules:
    Nix.C.Internal

  pkgconfig-depends:
    , nix-util-c
    , nix-store-c
    , nix-expr-c
    , nix-flake-c
    , nix-fetchers-c

  other-extensions:
    DerivingVia
    TypeApplications

test-suite nix-bindings-test
  import:           common
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  other-modules:
    Test.Nix.C.Construction
    Test.Nix.C.Expr
    Test.Nix.C.Monad
    Test.Nix.C.Settings
    Test.Nix.C.Store
    Test.Nix.C.Util
    Test.Nix.C.Value

  build-depends:
    , bytestring
    , filepath    >=1.4.200
    , nix-bindings
    , hspec
    , temporary
